# ai-enhanced-app-dev

./: .gitignore
docs/: ai-images.md  ai-learning.md  dev-ai-general.md
docs/app.frameworks/: app-frameworks.md  automation.md  langchain.md  special-interest-ai.md
docs/claude/: claude-mcp.md  claude_desktop_config_1.jsonc  claude_desktop_config_2.jsonc  claude_desktop_config_3.jsonc  claude_desktop_config_4.jsonc  claude_desktop_config_5.jsonc
docs/cli/: cli.md  non-really-cli.md
docs/data.embedding/: data-embedding.md
docs/data.ingestion/: data-ingestion.md
docs/data.transform/: data-transform.md
docs/db/: full-text.md  vector-dbs.md
docs/ide/: vs-code.md
docs/mcp/: mcp-general.md  mcp-server.md
docs/models/: ai-model-training.md  ai-models-saas.md
mcp-python/: CLAUDE.md  README.md  STATE.md  TODO-backlog.md  mcp-python.code-workspace  pyproject.toml
mcp-python/.devcontainer/: devcontainer.json  pre-devcontainer.env.template
mcp-python/docs/instructions/: mcp-protocol-and-json-schema.md
mcp-python/examples/: basic_mcp_client.py  mcp_shell.py  mcp_shell_features.py
mcp-python/scripts/: mcp-server.sh  mcp-shell.sh  mypy-check-tests.sh  mypy-check.sh
mcp-python/src/mcp_server/: mcp_server.py  prompt_completer.py
mcp-python/tests/: conftest.py  mcp_client.py  test_completion.py  test_connection_resilience.py  test_error_handling.py  test_mcp_integration.py  test_whitespace_completion.py
scripts/: mcp-memory-simple.sh  mcp-memory.sh
