[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mcp_python"
version = "0.1.0"
description = "basic mcp example with python"
requires-python = ">=3.11"
package = { include = ["src/mcp_server/**/*.py"] }
dependencies = [
    "prompt-toolkit>=3.0.0",
    "mcp>=1.12.0"
]

[project.optional-dependencies]
test = [
    # testing
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.4.0",
    "pytest-mypy>=1.0.1",
    "coverage>=7.9.2",
]
build = [
    "maturin>=1.0,<2.0",
    # typing
    "mypy>=1.10.0",
    "MonkeyType>=23.3.0",
    "pytest-monkeytype>=1.1.0",
    "auto-type-annotate>=1.1.2",
    # code quality
    "isort>=6.0.1",
    "autoflake8>=1.7.0",
    "autopep8>=2.0.0",
    "flake8>=7.3.0",
    "autopep8>=2.0.0",
    "isort>=6.0.1",
    # dependency management
    "pipdeptree>=2.8.0",
    "deptry>=0.14.0",
    # linting
    "pydocstyle>=6.3.0",
    "ruff>=0.4.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mcp_python"
#manifest-path = "rust/Cargo.toml"
bindings = "pyo3"
compatibility = "linux"  # or linux, macos, etc.
python-source = "src"
include = ["src/mcp_python/**/*.py"]

[tool.isort]
# profile = "pep8"
profile = "black"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", ".venv", "build", "dist", "docs"]
# extend-ignore = ["E203", "W503"]  # common ignores for some formatters like black

[tool.pydocstyle]
line-length = 120

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", ".venv", "build", "dist", "docs"]
extend-ignore = ["E203", "W503"]

[tool.autoflake8]
max-line-length = 120
remove-unused-variables = true
# remove-all-unused-imports = true
expand-star-imports = true

[tool.autopep8]
max_line_length = 120

[tool.mypy]
# global config here, if any
# strict = true
# check-untyped-defs = true
# local-partial-type = true
check_untyped_defs = true
ignore_missing_imports = false
local_partial_types = false

# [[tool.mypy.overrides]]
# module = ["pgvector.*", "mypy-astchunk.*", "astchunk.*"]
# ignore_missing_imports = true
